# optee_ftpm

./: .gitattributes  README.md
optee_examples/ftpm/: Android.mk  CMakeLists.txt  Makefile
optee_examples/ftpm/host/: Makefile  main.c
optee_examples/ftpm/ta/: Android.mk  Makefile  sub.mk
optee_examples/ftpm/ta/lib/: sub.mk
optee_examples/ftpm/ta/lib/tpm/: sub.mk
optee_examples/ftpm/ta/reference/include/: RuntimeSupport.h
toolchains/rust/.cargo/: env
toolchains/rust/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/: libLLVM.so.18.1-rust-1.81.0-stable
toolchains/rust/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/: manifest-rust-std-x86_64-unknown-linux-gnu  manifest-rustc-x86_64-unknown-linux-gnu  multirust-channel-manifest.toml
toolchains/rust/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/x86_64-unknown-linux-gnu/lib/: libaddr2line-1e0edbcd516a8cce.rlib  libadler-9e4e8543de06315e.rlib  libcfg_if-7ec98a9b1cc1792f.rlib  libcompiler_builtins-06dfbf1de02fde3b.rlib  libgetopts-d795265b28c533b0.rlib  libhashbrown-67895a0c8dd8130b.rlib  liblibc-2f9b4333f6d32438.rlib  libmemchr-e5c28d21823e9a85.rlib  libminiz_oxide-4f03d5a171522141.rlib  libpanic_abort-092afc03effc32a4.rlib  libpanic_unwind-85a631ebc91746e0.rlib  libprofiler_builtins-ec1537f4f2e03022.rlib  librustc_demangle-8c9d2edb6dff139f.rlib  librustc_std_workspace_core-2a862c0b1c86f483.rlib  (+6 more)
toolchains/rust/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/libexec/: rust-analyzer-proc-macro-srv
toolchains/rust/.rustup/update-hashes/: stable-x86_64-unknown-linux-gnu
(+24818 files in other folders)
